implement Kafka-based chat notification flow and fix tests